<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_window"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/layout_bg">


    <Button
        android:id="@+id/btn_close_dialog"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly.Rounded"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:icon="@drawable/ic_close"
        app:iconGravity="textEnd"
        app:iconSize="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_material_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:importantForAutofill="no"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/material_name_hint"/>

    <TextView
        android:id="@+id/tv_material_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/material_category"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_material_name"
        />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/rg_material_dialog"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_material_category"
        app:singleSelection="true">

        <Button
            android:id="@+id/bt_material_density"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_density"
            style="?attr/materialButtonOutlinedStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="толщина"
            style="?attr/materialButtonOutlinedStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="нестандартный"
            style="?attr/materialButtonOutlinedStyle"/>


    </com.google.android.material.button.MaterialButtonToggleGroup>


    <View
        android:id="@+id/material_dialog_separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="4dp"
        android:background="@color/sub_secondary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_material_dialog" />

    <Button
        android:id="@+id/btn_add_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/material_dialog_separator" />


</androidx.constraintlayout.widget.ConstraintLayout>