<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.fragments.toplevel.CreateMailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/create_separator_first"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/sub_secondary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_typeof_print"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/sub_main"
            android:gravity="center_horizontal"
            android:text="@string/type_of_print"
            android:textSize="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_separator_first" />


            <Button
                android:id="@+id/offsetPress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/custom_button"
                android:text="@string/offset_press"
                app:layout_constraintTop_toBottomOf="@id/tv_typeof_print"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/digitalPress"/>

            <Button
                android:id="@+id/digitalPress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/digital_press"
                app:layout_constraintTop_toBottomOf="@id/tv_typeof_print"
                app:layout_constraintLeft_toRightOf="@id/offsetPress"
                app:layout_constraintRight_toRightOf="parent"/>


        <View
            android:id="@+id/create_separator_second"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/sub_secondary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/digitalPress" />

        <FrameLayout
            android:id="@+id/sendMessageFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_separator_second"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>